--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <!-- Your own stylesheet -->
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Hello World</h1>
+  </body>
 </html>
